Did a lot of UI touch-ups, prettier dialog and a more consistent implementation

--- a/SimTECH/SimTECH/Pages/Contracts/Contracts.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/Contracts.razor
@@ -13,11 +13,11 @@
             <MudText Typo="Typo.h3">Contracts</MudText>
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                <MudButton OnClick="GoToManager">Manager</MudButton>
-                <MudButton OnClick="ToggleExpired">
+                <MudButton OnClick="GoToManager" Class="btn-md">Manager</MudButton>
+                <MudButton OnClick="ToggleExpired" Class="btn-md">
                     @(showingExpired ? "Active" : "Expired")
                 </MudButton>
-                <MudButton OnClick="AddItem">New</MudButton>
+                <MudButton OnClick="AddItem" Class="btn-md">New</MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
