--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -8,7 +8,8 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Incidents</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
+
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem" Class="btn-md">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="Incident" Items="@IncidentData" RowsPerPage="15" Dense="true">
