--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -90,7 +90,7 @@
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Last races</MudText>
                         <MudSpacer />
-                        <ScreenshotButton TargetId="recent-race-table" />
+                        <ScreenshotButton TargetId="recent-race-table" Class="btn-md" />
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>
