--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -6,16 +6,16 @@
         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-2">
             <div style="width:30%">
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" >
-                    <ScreenshotButton TargetId="race-display" />
+                    <ScreenshotButton TargetId="race-display" Class="btn-md" />
                     @if (RaweCeek.Race.State != State.Closed)
                     {
                         @if (calculated >= calculationCount)
                         {
-                            <MudButton OnClick="Finish">Finish</MudButton>
+                            <MudButton OnClick="Finish" Class="btn-md">Finish</MudButton>
                         }
                         else
                         {
-                            <MudButton OnClick="Advance">Advance</MudButton>
+                            <MudButton OnClick="Advance" Class="btn-md">Advance</MudButton>
                         }
                     }
                 </MudButtonGroup>
