--- a/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
@@ -10,17 +10,19 @@
                 <MudButton StartIcon="@Icons.Material.Filled.Save"
                            Color="Color.Success"
                            Variant="Variant.Outlined"
-                           OnClick="SaveDevelopment">
+                           OnClick="SaveDevelopment"
+                           Class="btn-md">
                     Save
                 </MudButton>
             }
             <MudButton StartIcon="@Icons.Material.Filled.Recycling"
                        Color="Color.Info"
                        Variant="Variant.Outlined"
-                       OnClick="RunDevelop">
+                       OnClick="RunDevelop"
+                       Class="btn-md">
                 Run
             </MudButton>
-            <ScreenshotButton TargetId="development-results" />
+            <ScreenshotButton TargetId="development-results" Class="btn-md" />
         </MudButtonGroup>
     </ToolBarContent>
     <HeaderContent>
