--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -3,7 +3,7 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Drivers</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="AddItem">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="AddItem" Class="btn-md">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="SeasonDriverListing" Items="@DriverList" Dense="true" Loading="@loading">
@@ -30,8 +30,8 @@
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Skill" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.Reliability" Title="REL" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Attack" Title="Attack" CellClass="font-caption" />
-            <PropertyColumn Property="e => e!.Defense" Title="Defense" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Attack" Title="ATT" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Defense" Title="DEF" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.Role" Title="Role" />
             <PropertyColumn Property="e => e!.Team" />
             <TemplateColumn T="SeasonDriverListing" Sortable="false">
