--- a/SimTECH/SimTECH/Pages/Season/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Settings.razor
@@ -4,7 +4,7 @@
             <MudStack Row="true">
                 <MudText Typo="Typo.h3">Settings</MudText>
                 <MudSpacer />
-                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit</MudButton>
+                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason" Class="btn-md">Edit</MudButton>
             </MudStack>
             <MudText Typo="Typo.body2" Color="Color.Warning">TODO: Fuck ugly page, improve design plssss</MudText>
         </MudPaper>
