--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -19,11 +19,11 @@
                           AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0 field-md" />
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                <MudButton OnClick="ToggleDisplayArchived">
+                <MudButton OnClick="ToggleDisplayArchived" Class="btn-md">
                     @(showingArchived ? "Active" : "Archive")
                 </MudButton>
-                <MudButton OnClick="GoToHumanGenerator">Generate</MudButton>
-                <MudButton OnClick="AddDriver">New</MudButton>
+                <MudButton OnClick="GoToHumanGenerator" Class="btn-md">Generate</MudButton>
+                <MudButton OnClick="AddDriver" Class="btn-md">New</MudButton>
             </MudButtonGroup>
         </ToolBarContent>
         <Columns>
