--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -11,10 +11,10 @@
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                <MudButton OnClick="ToggleDisplayArchived">
+                <MudButton OnClick="ToggleDisplayArchived" Class="btn-md">
                     @(showingArchived ? "Active" : "Archive")
                 </MudButton>
-                <MudButton OnClick="AddEngine">New</MudButton>
+                <MudButton OnClick="AddEngine" Class="btn-md">New</MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
