--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -108,7 +108,7 @@
                         <ToolBarContent>
                             <MudText>Human beings</MudText>
                             <MudSpacer />
-                            <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="SaveHumanBeings">Persist</MudButton>
+                            <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="SaveHumanBeings" Class="btn-md">Persist</MudButton>
                         </ToolBarContent>
                         <HeaderContent>
                             <MudTh>Name</MudTh>
