--- a/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
@@ -69,7 +69,7 @@
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Entrants</MudText>
                         <MudSpacer />
-                        <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="RandomEntrantAssignTrait">Random</MudButton>
+                        <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="RandomEntrantAssignTrait" Class="btn-md">Random</MudButton>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
@@ -100,7 +100,7 @@
                         <ToolBarContent>
                             <MudText Typo="Typo.h5">Newly assigned traits</MudText>
                             <MudSpacer />
-                            <MudButton Color="Color.Success" OnClick="PersistAssignedTraits">Save</MudButton>
+                            <MudButton Color="Color.Success" OnClick="PersistAssignedTraits" Class="btn-md">Save</MudButton>
                         </ToolBarContent>
                         <HeaderContent>
                             <MudTh>Name</MudTh>
