--- a/SimTECH/SimTECH/Pages/Traits/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Traits.razor
@@ -14,8 +14,8 @@
             <MudSpacer />
 
             <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                <MudButton OnClick="GoToTraitAssign">Assign</MudButton>
-                <MudButton OnClick="AddTrait">New</MudButton>
+                <MudButton OnClick="GoToTraitAssign" Class="btn-md">Assign</MudButton>
+                <MudButton OnClick="AddTrait" Class="btn-md">New</MudButton>
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
