--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -131,6 +131,14 @@ th {
     width: 800px;
 }
 
+.btn-md {
+    width: 150px;
+}
+
+.pb-20 {
+    padding-bottom: 100px !important;
+}
+
 .accent-cell {
     width: 5px !important;
     padding: 0px !important;
