--- a/SimTECH/SimTECH/Pages/Factors/Tyres.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Tyres.razor
@@ -11,19 +11,19 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Tyres</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem" Class="btn-md">New</MudButton>
         </MudStack>
-        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">Distance per advance: @(advanceDistance)Km</MudText>
+        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">Distance per advance: @(advanceDistance)km</MudText>
     </MudPaper>
     <MudDataGrid T="Tyre" Items="@tyres" RowsPerPage="15" Bordered="true" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e!.Name" CellStyleFunc="@_applyTyreColouring" />
-            <PropertyColumn Property="e => e!.ForWet" />
-            <PropertyColumn Property="e => e!.Pace" Title="Life" CellStyle="font-family: var(--mud-typography-caption-family)" />
-            <PropertyColumn Property="e => e!.PitWhenBelow" Title="&lt; PIT" />
+            <PropertyColumn Property="e => e!.ForWet" Title="Wet" />
+            <PropertyColumn Property="e => e!.Pace" Title="Life" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.PitWhenBelow" Title="&lt; PIT" CellClass="font-caption" />
             <TemplateColumn T="Tyre" Title="Length" SortBy="e => e.ExpectedLength(advanceDistance)">
                 <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.ExpectedLength(advanceDistance))Km</MudText>
+                    <MudText Typo="Typo.caption">@(context.Item.ExpectedLength(advanceDistance))km</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Tyre" Title="Wear" Sortable="false">
