--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -10,7 +10,7 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Leagues</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddLeague">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddLeague" Class="btn-md">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="League" Items="@LeagueData" Bordered="true">
