--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -7,17 +7,17 @@
 
             <MudSpacer />
 
-            <ScreenshotButton TargetId="practice-table" />
             <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Outlined">
+                <ScreenshotButton TargetId="practice-table" Class="btn-md" />
                 @if (!PracticeSession.IsFinished)
                 {
                     @if (advancedRuns == amountRuns)
                     {
-                        <MudButton OnClick="Finish">Finish</MudButton>
+                        <MudButton OnClick="Finish" Class="btn-md">Finish</MudButton>
                     }
                     else
                     {
-                        <MudButton OnClick="Advance">Advance</MudButton>
+                        <MudButton OnClick="Advance" Class="btn-md">Advance</MudButton>
                     }
                 }
             </MudButtonGroup>
