--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -7,13 +7,11 @@
 
 <PageTitle>Development</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
     <MudGrid>
         <MudItem xs="12">
-            <MudPaper Elevation="15" MinHeight="60px" Class="pa-2">
-                <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center" Class="pa-0">
-                    <MudText Typo="Typo.h3">Entrant Development</MudText>
-                </MudStack>
+            <MudPaper Elevation="15" MinHeight="60px" Class="pa-2 text-center">
+                <MudText Typo="Typo.h3">Entrant Development</MudText>
             </MudPaper>
         </MudItem>
         @if (!loading)
