--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -3,14 +3,14 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine" Class="btn-md">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="SeasonEngine" Items="@EngineEntrants" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e!.Name" />
-            <PropertyColumn Property="e => e!.Power" />
-            <PropertyColumn Property="e => e!.Reliability" Title="REL" />
+            <PropertyColumn Property="e => e!.Power" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Reliability" Title="REL" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.Rebadged" />
             <TemplateColumn T="SeasonEngine" Sortable="false">
                 <CellTemplate>
