--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -1,32 +1,28 @@
 ﻿@inject IDialogService _dialog
 
-<MudPaper MinHeight="60px">
-    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-        <MudSpacer />
-        <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
-            <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" />
-            <ScreenshotButton TargetId="wcc-season-results" />
-        </MudButtonGroup>
-    </MudStack>
-    </MudPaper>
-    <MudTable Items="@StandingConstructors" Dense="true" id="wcc-season-results">
-        <ToolBarContent>
-            <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
-                <MudText Typo="Typo.h4">World Constructors Championship @(Season.Year)</MudText>
-            </MudStack>
-        </ToolBarContent>
-        <HeaderContent>
-            <MudTh Class="number-col"></MudTh>
-            <MudTh Class="accent-cell"></MudTh>
-            <MudTh Style="width: 220px">Team</MudTh>
-            <MudTh Style="width: 220px">Principal</MudTh>
-            <MudTh>PTS</MudTh>
-            @foreach (var round in CountryRounds.OrderBy(e => e.Key))
-            {
-                <MudTh Class="number-col-lg">
-                    <CountryFlag Code="@round.Value" Size="ElementSize.Small" />
-                </MudTh>
-            }
+<MudTable Items="@StandingConstructors" Dense="true" id="wcc-season-results">
+    <ToolBarContent>
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
+            <MudText Typo="Typo.h4">World Constructors Championship @(Season.Year)</MudText>
+            <MudSpacer />
+            <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
+                <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" Class="btn-md" />
+                <ScreenshotButton TargetId="wcc-season-results" Class="btn-md" />
+            </MudButtonGroup>
+        </MudStack>
+    </ToolBarContent>
+    <HeaderContent>
+        <MudTh Class="number-col"></MudTh>
+        <MudTh Class="accent-cell"></MudTh>
+        <MudTh Style="width: 220px">Team</MudTh>
+        <MudTh Style="width: 220px">Principal</MudTh>
+        <MudTh>PTS</MudTh>
+        @foreach (var round in CountryRounds.OrderBy(e => e.Key))
+        {
+            <MudTh Class="number-col-lg">
+                <CountryFlag Code="@round.Value" Size="ElementSize.Small" />
+            </MudTh>
+        }
         <MudTh>AVG</MudTh>
     </HeaderContent>
     <RowTemplate>
