--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -1,19 +1,15 @@
 ﻿@inject IDialogService _dialog
 
 <MudPaper Elevation="15">
-    <MudPaper MinHeight="60px">
-        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-            <MudSpacer />
-            <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
-                <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" />
-                <ScreenshotButton TargetId="wdc-season-results" />
-            </MudButtonGroup>
-        </MudStack>
-    </MudPaper>
     <MudTable Items="@StandingDrivers" Dense="true" Class="extra-dense" id="wdc-season-results">
         <ToolBarContent>
-            <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-                <MudText Typo="Typo.h4">World Drivers Championship @(Season.Year)</MudText>
+            <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
+                <MudText Typo="Typo.h4">World Drivers Championship @Season.Year</MudText>
+                <MudSpacer />
+                <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
+                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" Class="btn-md" />
+                    <ScreenshotButton TargetId="wdc-season-results" Class="btn-md" />
+                </MudButtonGroup>
             </MudStack>
         </ToolBarContent>
         <HeaderContent>
